--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js"></script>
+   
 </head>
 <body>
     <main>
         <div id="container">
-            <div id="slider">
-                <img class="slide" src="./img/01.webp" alt="">
+            <div class="slider">
             </div>
-                <button style="background-color: white;" ><i class="fa-solid fa-square-caret-up"></i></button>
+                <button id="next" style="background-color: white;" ><i class="fa-solid fa-square-caret-up"></i></button>
                 <button style="background-color: white;" ><i class="fa-solid fa-square-caret-down"></i></button>
         </div>
     </main>
+    <script src="./js/script2.js"></script>
 </body>
-</html>
+ 
