esercizio rifatto da zero

--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>JScarousel</title>
     <link rel="stylesheet" href="./css/style.css">
-   
+
 </head>
+
 <body>
-    <main>
-        <div id="container">
-            <div class="slider">
-            </div>
-                <button id="next" style="background-color: white;" ><i class="fa-solid fa-square-caret-up"></i></button>
-                <button style="background-color: white;" ><i class="fa-solid fa-square-caret-down"></i></button>
-        </div>
-    </main>
-    <script src="./js/script2.js"></script>
+    <!-- slider container -->
+    <div id="slider" class="slider">
+
+
+
+        <!-- Control buttons -->
+        <button id="next" class="btn btn-next next">></button>
+        <button id="previous" class="btn btn-prev previous"><</button>
+    </div>
+    <script src="./js/script.js"></script>
 </body>
- 
